Display spinner while a section is loading

When a section status is "loading", a spinner should be displayed in
its footer. When the status is no longer "loading", the spinner should
be removed.

Bug: 754302
Change-Id: I43593459a471d766955a776657d3c212647b0bf3
Reviewed-on: https://chromium-review.googlesource.com/623208
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496250}
Former-commit-id: 069a237796a9a12d9f483a7909e0b716c2a51d5e