ios/chrome/browser/ui/content_suggestions/content_suggestions_data_sink.h
@@ -22,6 +22,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
             (ContentSuggestionsSectionInformation*)sectionInfo
                     forceReload:(BOOL)forceReload;
 
+// Notifies the Data Sink that the section identified by |sectionInfo|
+// |isLoading| or not.
+- (void)section:(ContentSuggestionsSectionInformation*)sectionInfo
+      isLoading:(BOOL)isLoading;
+
 // The suggestion associated with |suggestionIdentifier| has been invalidated by
 // the backend data source and should be cleared now. This is why this method is
 // about the data source pushing something to the data sink.
