ios/chrome/browser/ui/content_suggestions/cells/content_suggestions_footer_item_unittest.mm
@@ -34,6 +34,7 @@ TEST(ContentSuggestionsFooterItemTest, CellIsConfigured) {
 
   // Tests.
   EXPECT_EQ(title, [cell.button titleForState:UIControlStateNormal]);
+  EXPECT_EQ(cell, item.configuredCell);
   EXPECT_OCMOCK_VERIFY(mockCell);
 }
 
